# opencv_template

./: CMakeLists.txt
include/MyProject/: MyClass.h
src/: main.cpp
src/MyProject/: MyClass.cpp
